# retina-cv-pipeline

./: .gitignore  LICENSE  Makefile  NOTICE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
configs/: train_config.yaml
docker/: Dockerfile
retinai-doctex-second-version/: doc_mathematiques.tex  doc_technique.tex
src/api/: main.py
src/data/: dataset.py  preprocessing.py
src/evaluation/: evaluate.py  interpretability.py
src/models/: architecture.py  losses.py  optimize.py  train.py
src/utils/: config.py  logger.py
tests/: test_model.py  test_preprocessing.py
tex/: doc_mathematiques.aux  doc_mathematiques.blg  doc_mathematiques.out  doc_mathematiques.tex  doc_mathematiques.toc  doc_technique.aux  doc_technique.blg  doc_technique.out  doc_technique.tex  doc_technique.toc
