[project]
name = "retinai-pipeline"
version = "1.0.0"
description = "Pipeline de Computer Vision pour la détection de rétinopathie diabétique"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
